--- a/apps/api-server/package.json
+++ b/apps/api-server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kwitch-server",
-  "version": "1.0.0",
+  "name": "kwitch-api-server",
+  "version": "0.0.1",
   "description": "",
   "main": "src/app.js",
   "scripts": {
