--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "kwitch",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT"
 }
