--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,21 +1,7 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "target": "ES6",
-    "module": "CommonJS",
-    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*"],
-    },
-    "typeRoots": ["node_modules/@types", "./typings"]
   },
-  "include": ["./src/**/*.ts", "typings/**/*.d.ts", "typings/types.ts"],
-  "exclude": ["node_modules", "dist"],
-  "ts-node": {
-    "files": true,
-    "require": ["tsconfig-paths/register"]
-  }
 }
