--- a/apps/socket/tsconfig.json
+++ b/apps/socket/tsconfig.json
@@ -1,4 +1,10 @@
 {
-    "extends": "../../tsconfig.json",
-    "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
+  },
+  "include": ["src/**/*.ts", "src/types/**/*.d.ts"]
 }
