--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,12 +5,7 @@
   "scripts": {
     "build": "tsc -p .",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
-    "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/app.js",
-    "prisma:studio": "npx prisma studio",
-    "prisma:generate": "npx prisma generate",
-    "prisma:migrate:dev": "npx prisma migrate dev",
-    "prisma:migrate:deploy": "npx prisma migrate deploy",
-    "format": "prettier --write ./src/**/*.ts"
+    "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/app.js"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -21,19 +16,13 @@
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.5",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/validator": "^13.11.8",
-    "nodemon": "^3.1.4",
-    "prettier": "3.3.2",
-    "prisma": "^5.15.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/validator": "^13.11.8"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.1",
+    "@kwitch/db": "link:../../packages/db",
+    "@kwitch/types": "link:../../packages/types",
     "@quixo3/prisma-session-store": "^3.1.13",
-    "@socket.io/admin-ui": "^0.5.1",
+    "@types/passport": "^1.0.16",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
@@ -44,12 +33,9 @@
     "mediasoup": "^3.14.14",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "redis": "^4.6.14",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
     "socket.io": "^4.7.2",
-    "tsconfig-paths": "^4.2.0",
     "typedi": "^0.10.0"
   }
 }
