--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,5 +3,9 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
 }
