--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "main": "src/index.ts",
   "dependencies": {
-    "@prisma/client": "^5.15.1"
+    "@prisma/client": "^5.15.1",
+    "dotenv": "^16.3.1",
+    "redis": "^4.6.14"
   },
   "devDependencies": {
     "prisma": "^5.15.1"
