--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "helmet": "^8.0.0",
     "mediasoup": "^3.14.14",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
