feat: PrismaSessionStore to RedisSessionStore

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-
 # Server settings
 # -------------------------------------------------
-# random string for express-session
+# random string for security
 SECRET_KEY=
-# ex) postgresql://{USER}:{PASSWORD}@{HOST}:{PORT}/{DATABASE}
+
+# ex) postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+# see: https://www.prisma.io/docs/orm/overview/databases/postgresql#connection-url
 DATABASE_URL=
-# ex) localhost
-REDIS_HOST=
-# ex) 6379
-REDIS_PORT=
+
+# ex) redis[s]://[[username][:password]@][host][:port][/db-number]
+REDIS_URL=
 
 # Additional settings for mediasoup
 # -------------------------------------------------
