--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,21 +12,23 @@
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.5",
+    "@types/passport": "^1.0.16",
     "@types/validator": "^13.11.8"
   },
   "dependencies": {
     "@kwitch/db": "link:../../packages/db",
     "@kwitch/types": "link:../../packages/types",
-    "@quixo3/prisma-session-store": "^3.1.13",
-    "@types/passport": "^1.0.16",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "db": "link:../../pacakages/db",
     "dotenv": "^16.3.1",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
