--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,13 +2,13 @@
   "name": "@kwitch/api",
   "version": "0.1.0",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "build": "tsc -p .",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts",
-    "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/app.js"
+    "dev": "tsx --watch src/index.ts",
+    "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.7",
@@ -17,10 +17,10 @@
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.5",
-    "@types/passport": "^1.0.16",
     "@types/validator": "^13.11.8"
   },
   "dependencies": {
+    "@kwitch/auth": "link:../../packages/auth",
     "@kwitch/db": "link:../../packages/db",
     "@kwitch/types": "link:../../packages/types",
     "bcrypt": "^5.1.1",
@@ -32,10 +32,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "get-root-path": "^2.0.2",
     "helmet": "^8.0.0",
     "mediasoup": "^3.14.14",
     "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.10.4",
     "socket.io": "^4.7.2",
