--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {},
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^22.7.4",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "tsx": "^4.19.1"
   }
 }
