--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,9 +2,11 @@
   "name": "@kwitch/db",
   "version": "0.1.0",
   "main": "src/index.ts",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.15.1",
     "dotenv": "^16.3.1",
+    "get-root-path": "^2.0.2",
     "redis": "^4.6.14"
   },
   "devDependencies": {
