--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "main": "src/index.ts",
   "type": "module",
+  "scripts": {
+    "prisma:studio": "prisma studio",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy"
+  },
   "dependencies": {
     "@prisma/client": "^5.15.1",
     "dotenv": "^16.3.1",
