--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,8 +16,8 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/multer": "^1.4.12",
-    "@types/node": "^20.11.5",
-    "@types/validator": "^13.11.8"
+    "@types/node": "^20.16.10",
+    "@types/validator": "^13.12.2"
   },
   "dependencies": {
     "@kwitch/auth": "link:../../packages/auth",
@@ -29,16 +29,16 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "db": "link:../../pacakages/db",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
     "get-root-path": "^2.0.2",
     "helmet": "^8.0.0",
+    "inversify": "^6.0.2",
+    "inversify-express-utils": "^6.4.6",
     "mediasoup": "^3.14.14",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
-    "routing-controllers": "^0.10.4",
-    "socket.io": "^4.7.2",
-    "typedi": "^0.10.0"
+    "socket.io": "^4.8.0"
   }
 }
