--- a/apps/socket/tsconfig.json
+++ b/apps/socket/tsconfig.json
@@ -9,5 +9,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/types/**/*.d.ts"]
+  "include": ["src/**/*.ts", "src/@types/**/*.d.ts"]
 }
