--- a/apps/socket/package.json
+++ b/apps/socket/package.json
@@ -8,8 +8,7 @@
     "dev": "tsx --watch src/index.ts"
   },
   "devDependencies": {
-    "@types/express-session": "^1.18.0",
-    "@types/socket.io": "^3.0.2"
+    "@types/express-session": "^1.18.0"
   },
   "dependencies": {
     "@kwitch/auth": "link:../../packages/auth",
@@ -21,11 +20,11 @@
     "get-root-path": "^2.0.2",
     "helmet": "^8.0.0",
     "http": "0.0.1-security",
+    "inversify": "^6.0.2",
     "koa": "^2.15.3",
     "mediasoup": "^3.14.14",
     "reflect-metadata": "^0.2.2",
-    "socket.io": "^4.7.2",
-    "typedi": "^0.10.0"
+    "socket.io": "^4.7.2"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8",
