--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,7 +28,6 @@
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "db": "link:../../pacakages/db",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
@@ -36,9 +35,6 @@
     "helmet": "^8.0.0",
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
-    "mediasoup": "^3.14.14",
-    "multer": "1.4.5-lts.1",
-    "reflect-metadata": "^0.2.2",
-    "socket.io": "^4.8.0"
+    "reflect-metadata": "^0.2.2"
   }
 }
