--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -9,6 +9,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["./src/**/*.ts", "./@types/**/*.d.ts"],
+  "include": ["./src/**/*.ts", "src/@types/**/*.d.ts"],
   "exclude": ["node_modules"]
 }
