--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -2,5 +2,5 @@
   "rules": {
     "react-hooks/exhaustive-deps": "off"
   },
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals"]
 }
