--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "kwitch",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "pnpm -r --stream run build",
     "dev": "pnpm -r --stream run dev",
+    "start": "pnpm -r --parallel run start",
     "lint": "pnpm -r --stream run lint",
     "format": "pnpm -r --stream run format"
   },
@@ -14,9 +14,10 @@
     "@eslint/js": "^9.12.0",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^8",
+    "esm-module-alias": "^2.2.1",
     "prettier": "^3.3.3",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.2",
+    "tsx": "^4.19.1",
+    "typescript": "^5",
     "typescript-eslint": "^8.8.1"
   }
 }
