--- a/apps/socket/package.json
+++ b/apps/socket/package.json
@@ -6,22 +6,27 @@
   "scripts": {
     "build": "tsc -p .",
     "dev": "tsx --watch src/index.ts",
+    "start": "NODE_ENV=production node --loader esm-module-alias/loader --no-warnings dist/index.js",
     "lint": "eslint ./src -c ../../eslint.config.js --fix",
     "format": "prettier --write ./src"
+  }, 
+  "aliases": {
+    "@": "./dist"
   },
   "devDependencies": {
     "@types/express-session": "^1.18.0"
   },
   "dependencies": {
-    "@kwitch/auth": "link:../../packages/auth",
-    "@kwitch/db": "link:../../packages/db",
-    "@kwitch/types": "link:../../packages/types",
+    "@kwitch/auth": "workspace:*",
+    "@kwitch/db": "workspace:*",
+    "@kwitch/types": "workspace:*",
+    "@types/express": "^4.17.21",
     "connect-redis": "^7.1.1",
     "dotenv": "^16.3.1",
+    "express": "^4.21.0",
     "express-session": "^1.18.0",
     "get-root-path": "^2.0.2",
     "helmet": "^8.0.0",
-    "http": "0.0.1-security",
     "inversify": "^6.0.2",
     "mediasoup": "^3.14.14",
     "reflect-metadata": "^0.2.2",
