--- a/apps/socket/tsconfig.json
+++ b/apps/socket/tsconfig.json
@@ -7,7 +7,8 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
   },
-  "include": ["src/**/*.ts", "src/@types/**/*.d.ts"]
+  "include": ["src/**/*.ts", "src/types/**/*.d.ts"],
+  "exclude": ["node_modules"]
 }
