--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,9 @@
     "format": "prettier --write ./app ./components ./lib ./utils"
   },
   "dependencies": {
-    "@kwitch/types": "link:../../packages/types",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.3.2",
+    "@kwitch/types": "workspace:*",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,7 +28,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "mediasoup-client": "^3.7.16",
-    "next": "^14.2.4",
+    "next": "^14.2.15",
     "next-themes": "^0.2.1",
     "pretendard": "^1.3.9",
     "react": "^18.3.1",
