--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,5 +2,11 @@
   "name": "@kwitch/types",
   "version": "0.1.0",
   "type": "module",
-  "main": "src/index.js"
+  "exports": {
+    "types": "./src/index.ts",
+    "default": "./dist/index.js"
+  },
+  "scripts": {
+    "build": "tsc -p ."
+  }
 }
