--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "es2022",
+    "module": "node16",
+		"moduleResolution": "node16",
+    "esModuleInterop": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
     "strict": true
-  }
+  },
+  "exclude": ["node_modules", "**/*/dist"],
 }
