--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc -p .",
+    "build": "pkgroll",
     "dev": "tsx --watch src/index.ts",
     "start": "NODE_ENV=production node --loader esm-module-alias/loader --no-warnings dist/index.js",
     "lint": "eslint ./src -c ../../eslint.config.js --fix",
