--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "pnpm -r run build",
-    "dev": "pnpm -r --parallel run dev",
+    "build:packages": "pnpm --filter='./packages/**' build",
+    "dev": "pnpm build:packages && pnpm -r --parallel run dev",
     "lint": "pnpm -r run lint",
     "format": "pnpm -r run format"
   },
@@ -21,6 +22,7 @@
     "@eslint/js": "^9.12.0",
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^8.57.1",
+    "pkgroll": "^2.5.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
