feat: turborepo 적용 및 Dockerfile 작성

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,13 @@
-node_modules
-volumes
+.env
+.env.*
+*.md
 .git
 .gitignore
-*.md
+.dockerignore
+Dockerfile
+docker-compose.yml
+
 dist
+node_modules
+.vscode
+.idea
