--- a/apps/socket/tsconfig.json
+++ b/apps/socket/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "@kwitch/typescript-config/tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./",
