--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@kwitch/web",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./app ./components ./lib ./utils"
+    "check-types": "tsc --noEmit"
   },
   "files": [
-    ".next"
+    ".next",
+    "public"
   ],
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -37,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
+    "sharp": "^0.33.5",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
