--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@9.12.2",
   "engines": {
     "node": ">=18"
   },
   "scripts": {
-    "build": "pnpm -r run build",
-    "build:packages": "pnpm --filter='./packages/**' build",
-    "dev": "pnpm build:packages && pnpm -r --parallel run dev",
-    "lint": "pnpm -r run lint",
-    "format": "pnpm -r run format"
+    "build": "turbo run build",
+    "dev": "turbo run dev --no-cache --parallel",
+    "lint": "turbo run lint",
+    "docker:api": "docker build -t kwitch/api -f apps/api/Dockerfile .",
+    "docker:socket": "docker build -t kwitch/socket -f apps/socket/Dockerfile .",
+    "docker:web": "docker build -t kwitch/web -f apps/web/Dockerfile ."
   },
   "license": "MIT",
   "dependencies": {
@@ -22,9 +23,7 @@
     "@eslint/js": "^9.12.0",
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^8.57.1",
-    "pkgroll": "^2.5.0",
     "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0"
