--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "docker:web": "docker build -t kwitch/web -f apps/web/Dockerfile ."
   },
   "license": "MIT",
-  "dependencies": {
-    "esm-module-alias": "^2.2.1"
-  },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^8.57.1",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
+    "turbo": "^2.2.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0"
   }
