--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://kwitch.online
+NEXT_PUBLIC_API_URL=https://kwitch.online:8000
+NEXT_PUBLIC_SOCKET_URL=https://kwitch.online:8001
