--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,74 @@
 services:
+  postgres:
+    container_name: kwitch-postgres
+    image: postgres:17.0-alpine3.20
+    hostname: kwitch-postgres
+    restart: unless-stopped
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    volumes:
+      - ./volumes/postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-U", "postgres" ]
+
+  redis:
+    container_name: kwitch-redis
+    image: redis:7.4.1-alpine3.20
+    hostname: kwitch-redis
+    restart: unless-stopped
+    ports:
+      - "${REDIS_PORT}:6379"
+    volumes:
+      - ./volumes/redis-data:/var/lib/redis/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+
   api:
     container_name: kwitch-api
-    image: sukjuhong/kwitch-api
-    ports:
-      - "8000:8000"
+    image: sukjuhong/kwitch-api:latest
+    hostname: kwitch-api
+    network_mode: "host"
+    environment:
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
   socket:
     container_name: kwitch-socket
-    image: sukjuhong/kwitch-socket
+    image: sukjuhong/kwitch-socket:latest
     network_mode: "host"
+    environment:
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      MEDIASOUP_LISTEN_IP: ${MEDIASOUP_LISTEN_IP}
+      MEDIASOUP_ANNOUNCED_IP: ${MEDIASOUP_ANNOUNCED_IP}
+      MEDIASOUP_MIN_PORT: ${MEDIASOUP_MIN_PORT}
+      MEDIASOUP_MAX_PORT: ${MEDIASOUP_MAX_PORT}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
   web:
     container_name: kwitch-web
-    image: sukjuhong/kwitch-web
+    image: sukjuhong/kwitch-web:latest
+    hostname: kwitch-web
     ports:
       - "3000:3000"
     depends_on:
