fix: @kwitch/web URL 관련 env 수정

--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_API_URL=https://kwitch.online:8000
-NEXT_PUBLIC_SOCKET_URL=https://kwitch.online:8001
+NEXT_PUBLIC_BASE_URL=https://kwitch.online
