--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./volumes/postgres-data:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD", "pg_isready", "-U", "postgres" ]
-
+  
   redis:
     container_name: kwitch-redis
     image: redis:7.4.1-alpine3.20
@@ -25,6 +25,15 @@ services:
       - ./volumes/redis-data:/var/lib/redis/data
     healthcheck:
       test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+  
+  migrate:
+    build:
+      context: .
+      dockerfile: ./docker/postgres/Dockerfile.migrate
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: no
 
   api:
     container_name: kwitch-api
@@ -43,6 +52,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
 
   socket:
     container_name: kwitch-socket
@@ -64,6 +75,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+      migrate:
+        condition: service_completed_successfully
 
   web:
     container_name: kwitch-web
@@ -71,6 +84,3 @@ services:
     hostname: kwitch-web
     ports:
       - "3000:3000"
-    depends_on:
-      - api
-      - socket
