fix: migration시 initialize가 두번 되는 오류 수정

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -23,4 +23,4 @@ WORKDIR /app
 USER node
 COPY --from=installer --chown=node:node /app/ .
 
-ENTRYPOINT ["pnpm", "--filter=api", "start"]
+ENTRYPOINT ["/bin/sh", "-c", "pnpm --filter=db-connection migration:run && pnpm --filter=api start"]
