--- a/package.json
+++ b/package.json
@@ -2,28 +2,23 @@
   "name": "kwitch",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "type": "module",
   "packageManager": "pnpm@9.12.2",
   "engines": {
     "node": ">=18"
   },
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev --no-cache --parallel",
-    "lint": "turbo run lint",
+    "build": "turbo build",
+    "dev": "turbo dev --no-cache --parallel",
+    "lint:format": "turbo lint format",
     "docker:api": "docker build -t sukjuhong/kwitch-api:latest -f apps/api/Dockerfile .",
     "docker:socket": "docker build -t sukjuhong/kwitch-socket:latest -f apps/socket/Dockerfile .",
     "docker:web": "docker build -t sukjuhong/kwitch-web:latest -f apps/web/Dockerfile ."
   },
-  "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@typescript-eslint/parser": "^8.9.0",
-    "eslint": "^8.57.1",
     "prettier": "^3.3.3",
-    "tsx": "^4.19.1",
     "turbo": "^2.2.3",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0"
+    "typescript": "^5"
   }
 }
