feat: 프로덕션 환경변수 설정

--- a/packages/persistence/package.json
+++ b/packages/persistence/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@kwitch/domain": "workspace:*",
     "@kwitch/typescript-config": "workspace:*",
+    "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
