--- a/apps/core-api/package.json
+++ b/apps/core-api/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsx --watch src/index.ts",
-    "start": "NODE_ENV=production node --loader esm-module-alias/loader --no-warnings dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js",
     "format": "prettier --write src/**/*.ts"
   },
-  "import": {
+  "imports": {
     "#*": "./dist/*"
   },
   "devDependencies": {
