--- a/turbo.json
+++ b/turbo.json
@@ -1,9 +1,12 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
+    "dev": {
+      "dependsOn": ["^db:generate"],
+      "cache": false
+    },
     "build": {
       "dependsOn": ["^build"],
-      "inputs": [".env*"],
       "outputs": [".next/**", "!.next/cache/**", "dist"]
     },
     "lint": {
@@ -12,8 +15,10 @@
     "format": {
       "dependsOn": ["^format"]
     },
-    "dev": {
-      "persistent": true,
+    "db:generate": {
+      "cache": false
+    },
+    "db:push": {
       "cache": false
     }
   }
