--- a/.gitignore
+++ b/.gitignore
@@ -84,7 +84,7 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
-.env.production
+.env.keys
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
