feat: use createWebRtcServer

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,11 +1,13 @@
 {
-  "extends": "@kwitch/typescript-config/tsconfig.base.json",
+  "extends": "@kwitch/typescript-config/base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
-    }
+      "#/*": ["src/*"]
+    },
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
   "include": ["./src/**/*.ts", "src/types/**/*.d.ts"],
 }
