--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -4,5 +4,8 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts"
+  },
+  "devDependencies": {
+    "@kwitch/typescript-config": "workspace:*"
   }
 }
