--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "dev": "turbo run dev --no-cache --parallel",
     "lint": "turbo run lint",
     "docker:api": "docker build -t sukjuhong/kwitch-api:latest -f apps/api/Dockerfile .",
-    "docker:socket": "docker build -t sukjuhong/kwitch-socket:latest -f apps/socket/Dockerfile .",
     "docker:web": "docker build -t sukjuhong/kwitch-web:latest -f apps/web/Dockerfile ."
   },
   "license": "MIT",
@@ -21,7 +20,7 @@
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^8.57.1",
     "prettier": "^3.3.3",
-    "tsx": "^4.19.1",
+    "tsup": "^8.3.5",
     "turbo": "^2.2.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.9.0"
