fix: wrong api port range

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,8 @@ services:
     hostname: kwitch-api
     ports:
       - "8000:8000"
-      - ${MEDIASOUP_WEBRTC_SERVER_PORT-MEDIASOUP_WEBRTC_SERVER_PORT_MAX}:${MEDIASOUP_WEBRTC_SERVER_PORT-MEDIASOUP_WEBRTC_SERVER_PORT_MAX}/tcp
-      - ${MEDIASOUP_WEBRTC_SERVER_PORT-MEDIASOUP_WEBRTC_SERVER_PORT_MAX}:${MEDIASOUP_WEBRTC_SERVER_PORT-MEDIASOUP_WEBRTC_SERVER_PORT_MAX}/udp
+      - ${MEDIASOUP_WEBRTC_SERVER_PORT}-${MEDIASOUP_WEBRTC_SERVER_PORT_MAX}:${MEDIASOUP_WEBRTC_SERVER_PORT}-${MEDIASOUP_WEBRTC_SERVER_PORT_MAX}/tcp
+      - ${MEDIASOUP_WEBRTC_SERVER_PORT}-${MEDIASOUP_WEBRTC_SERVER_PORT_MAX}:${MEDIASOUP_WEBRTC_SERVER_PORT}-${MEDIASOUP_WEBRTC_SERVER_PORT_MAX}/udp
     environment:
       POSTGRES_HOST: ${POSTGRES_HOST}
       POSTGRES_PORT: ${POSTGRES_PORT}
