fix: MEDIASOUP_WEBRTC_SERVER_PORT 누락

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "build": "tsup ./src/index.ts --format esm --minify --clean",
-    "dev": "tsx --watch ./src/index.ts",
+    "dev": "DEBUG='mediasoup*' tsx --watch ./src/index.ts",
     "start": "node dist/index.js",
     "lint": "eslint ./src -c ../../eslint.config.js --fix",
     "format": "prettier --write ./src"
