--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,6 @@ services:
       POSTGRES_USER: ${POSTGRES_USERNAME}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - ./volumes/postgres-data:/var/lib/postgresql/data
     healthcheck:
@@ -20,8 +18,6 @@ services:
     image: redis:7.4.1-alpine3.20
     hostname: ${REDIS_HOST}
     restart: unless-stopped
-    ports:
-      - "${REDIS_PORT}:${REDIS_PORT}"
     volumes:
       - ./volumes/redis-data:/var/lib/redis/data
     command:
@@ -50,6 +46,7 @@ services:
       REDIS_PASSWORD: ${REDIS_PASSWORD}
       MEDIASOUP_LISTEN_IP: ${MEDIASOUP_LISTEN_IP}
       MEDIASOUP_ANNOUNCED_IP: ${MEDIASOUP_ANNOUNCED_IP}
+      MEDIASOUP_WEBRTC_SERVER_PORT: ${MEDIASOUP_WEBRTC_SERVER_PORT}
     depends_on:
       postgres:
         condition: service_healthy
