--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.16.10",
     "@types/passport": "^1.0.16",
@@ -46,6 +47,7 @@
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
     "mediasoup": "^3.14.14",
+    "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
