--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,34 +10,19 @@ on:
       - "packages/**"
 
 jobs:
-  generate-apps-matrix:
-    name: Generate apps matrix
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set matrix
-        id: set-matrix
-        run: |
-          echo "apps: $(ls apps)"
-          matrix=$(jq -n --arg apps "$(ls apps)" '{
-            include: [split(" ") | .[] | {name: ., dockerfile: "apps/\(.)/Dockerfile"}]
-          }')
-          echo "::set-output name=matrix::$matrix"
-
   build-and-push-apps:
     name: Build and push apps
     runs-on: ubuntu-latest
-    needs: [generate-apps-matrix]
     strategy:
-      matrix: ${{fromJson(needs.generate-apps-matrix.outputs.matrix)}}
+      matrix:
+        username: [sukjuhong]
+        app: [api, web]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/build-and-push
         with:
-          image-tag: ${{ matrix.image-tag }}
-          dockerfile: ${{ matrix.dockerfile }}
+          username: ${{ matrix.username }}
+          app: ${{ matrix.app }}
 
   deploy:
     name: Deploy
