feat: 에러 처리 방식 변화 및 socket 에러 응답 추가

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,7 @@
 		"ghcr.io/itsmechlark/features/postgresql:1.5.0": {},
 		"ghcr.io/itsmechlark/features/redis-server:1": {}
 	},
-	"forwardPorts": [3000, 8000],
+	"forwardPorts": [3000, 8000, 44444],
 	"postCreateCommand": "bash .devcontainer/init.sh"
 	// "customizations": {},
 	// "remoteUser": "root"
