--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
 	"features": {
 		"ghcr.io/devcontainers-extra/features/pnpm:2": {},
 		"ghcr.io/itsmechlark/features/postgresql:1.5.0": {},
-		"ghcr.io/itsmechlark/features/redis-server:1": {}
+		"ghcr.io/itsmechlark/features/redis-server:1": {},
+		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
 	"forwardPorts": [3000, 8000, 44444],
 	"postCreateCommand": "bash .devcontainer/init.sh"
